# AntSimulator

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conf_example.txt  install.sh  install_from_docker.sh
include/: ant.hpp  ant_mode.hpp  ant_updater.hpp  async_va_renderer.hpp  circular_gauge.hpp  colony.hpp  colony_base.hpp  colony_renderer.hpp  config.hpp  cooldown.hpp  direction.hpp  display_manager.hpp  distance_field_builder.hpp  double_buffer.hpp  event_state.hpp  fight_system.hpp  food.hpp  graph.hpp  grid.hpp  index_vector.hpp  int_grid.hpp  map_loader.hpp  marker.hpp  markers_grid.hpp  markers_renderer.hpp  number_generator.hpp  racc.hpp  renderer.hpp  simulation.hpp  soldier.hpp  sound_player.hpp  utils.hpp  viewport_handler.hpp  walls_renderer.hpp  worker.hpp  world.hpp  world_grid.hpp  world_renderer.hpp
include/common/: circular_gauge.hpp  color_utils.hpp  cooldown.hpp  direction.hpp  dynamic_blur.hpp  event_manager.hpp  graph.hpp  index_vector.hpp  math.hpp  number_generator.hpp  racc.hpp  resource_store.hpp  utils.hpp  viewport_handler.hpp
include/editor/:  world_view.hpp  brush_mode.hpp  color_picker.hpp  color_saver.hpp  control_state.hpp  controller.hpp  editor_scene.hpp  game_scene.hpp  game_view.hpp  set_color_button.hpp  slider.hpp  tool_selector.hpp  toolbox.hpp  transition.hpp  world_view.hpp
include/editor/GUI/: button.hpp  container.hpp  empty_item.hpp  grid_container.hpp  item.cpp  item.hpp  named_container.hpp  resource_store.hpp  rounded_rectangle.hpp  scene.hpp  text_label.hpp  toggle.hpp  utils.hpp
include/editor/colony_creator/: colony_creator.hpp  colony_stats.hpp  colony_tool.hpp
include/editor/color_picker/: color_picker.hpp
include/editor/display_options/: display_options.hpp
include/editor/time_control/: time_controller.hpp
include/render/: async_va_renderer.hpp  colony_renderer.hpp  renderer.hpp  world_renderer.hpp
include/simulation/: config.hpp  offscreen_simulation.hpp  simulation.hpp  simulation_context.hpp
include/simulation/ant/: ant.hpp  ant_updater.hpp  fight_system.hpp  soldier.hpp  worker.hpp
include/simulation/colony/: colony.hpp  colony_base.hpp
include/simulation/world/: async_distance_field_builder.hpp  distance_field_builder.hpp  map_loader.hpp  wall.hpp  world.hpp  world_grid.hpp
src/: config.cpp  display_manager.cpp  main.cpp  sound_player.cpp  utils.cpp
