cmake_minimum_required(VERSION 3.10)
project(AntSimulator VERSION 1.0.0 LANGUAGES CXX)

# Default to release builds
if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
endif()

find_package(SFML 2 REQUIRED COMPONENTS graphics system window)
find_package(Threads REQUIRED)

set(SFML_LIBS sfml-graphics sfml-system sfml-window)

file(GLOB SOURCES src/*.cpp)
add_executable(${PROJECT_NAME} ${WIN32_GUI} ${SOURCES})
target_include_directories(${PROJECT_NAME} PRIVATE "include" "lib")
set(SFML_LIBS sfml-system sfml-window sfml-graphics)
target_link_libraries(${PROJECT_NAME} ${SFML_LIBS})
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
if (UNIX)
   target_link_libraries(${PROJECT_NAME} pthread)
endif (UNIX)

# Copy res dir and to the binary directory and update conf file
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/res DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
set(CONF_SRC FALSE)
set(CONF_BIN FALSE)
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/conf.txt)
    set(CONF_SRC TRUE)
endif()
if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/conf.txt)
    set(CONF_BIN TRUE)
endif()
execute_process(COMMAND diff ${CMAKE_CURRENT_BINARY_DIR}/conf.txt ${CMAKE_CURRENT_SOURCE_DIR}/conf.txt RESULT_VARIABLE CONF_DIFF)
set(CONF_STAT "Configuration successfully updated")
if(CONF_SRC AND CONF_BIN AND CONF_DIFF)
    set(CONF_STAT "Could not update configuration files: files are different")
elseif(CONF_SRC AND NOT CONF_BIN)
    set(CONF_STAT "Copying ${CMAKE_CURRENT_SOURCE_DIR}/conf.txt to ${CMAKE_CURRENT_BINARY_DIR}")
    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/conf.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
elseif(CONF_BIN AND NOT CONF_SRC)
    set(CONF_STAT "Copying ${CMAKE_CURRENT_BINARY_DIR}/conf.txt to ${CMAKE_CURRENT_SOURCE_DIR}")
    file(COPY ${CMAKE_CURRENT_BINARY_DIR}/conf.txt DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
elseif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/conf_example.txt)
    set(CONF_STAT "Copying ${CMAKE_CURRENT_SOURCE_DIR}/conf_example.txt to ${CMAKE_CURRENT_BINARY_DIR}/conf.txt and ${CMAKE_CURRENT_SOURCE_DIR}/conf.txt")
    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/conf_example.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    file(RENAME ${CMAKE_CURRENT_BINARY_DIR}/conf_example.txt ${CMAKE_CURRENT_BINARY_DIR}/conf.txt)
    file(COPY ${CMAKE_CURRENT_BINARY_DIR}/conf.txt DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
endif()
message(STATUS ${CONF_STAT})

if(MSVC)
   foreach(lib ${SFML_LIBS})
      get_target_property(lib_path ${lib} LOCATION)
      file(COPY ${lib_path} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
   endforeach()
endif()
